feat: [문제 6] 결과 함수 구현