@@ -1,12 +1,40 @@
 package onboarding;
 
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class Problem6 {
-    public static List<String> solution(List<List<String>> forms) {
-        List<String> answer = List.of("answer");
-        return answer;
-    }
+	public static List<String> solution(List<List<String>> forms) {
+		Map<String, Set<String>> nicknameSetMap = mapByNicknameMapSet(forms);
+		Set<String> emailSet = new HashSet<>();
+
+		for (List<String> form : forms) {
+			if (!isValidSize(forms.size())) {
+				return Collections.emptyList();
+			}
+
+			if (!isEmailFormat(form.get(0)) || !isValidEmailLength(form.get(0).length())) {
+				return Collections.emptyList();
+			}
+
+			String nickname = form.get(1);
+			for (int i = 0; i < nickname.length() - 1; i++) {
+				Set<String> nicknameSet = nicknameSetMap.get(nickname.substring(i, i + 2));
+				if (nicknameSet.size() > 1) {
+					emailSet.add(form.get(0));
+				}
+			}
+		}
+
+		List<String> answer = emailSet.stream().sorted().collect(Collectors.toList());
+		return answer;
+	}
+
 	private static boolean isValidSize(int size) {
 		return size >= 1 && size <= 1000000;
 	}
